# bbdnn

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: nn_demo.cpp
include/bbdnn/: Activations.hpp  DenseLayer.hpp  LayerConnection.hpp  Matrix.hpp  NeuralNetwork.hpp  bbdnn.hpp
src/: Activations.cpp  DenseLayer.cpp  LayerConnection.cpp  Matrix.cpp  NeuralNetwork.cpp
